[package]
name = "bevy-rhythm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }

[dev-dependencies]
bevy-inspector-egui = "0.15.0"
bevy = { version = "0.9.1", features = ["dynamic", "wayland"] }
bevy_flycam = "0.9.0"
